--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exam Result Portal</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="https://imgs.search.brave.com/nnHCratEg55BP52fA3EG7FPhgi44zi0TafJwQgY1Ne0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/Z3BicmFtaGFwdXJp/LmVkdS5pbi93cC1j/b250ZW50L3VwbG9h/ZHMvMjAyMC8wMi84/LWxvZ28tMS5qcGc" type="image/x-icon">
 </head>
 <body>
     <div class="container">
+        <div class="logo-container">
+            <img src="https://imgs.search.brave.com/nnHCratEg55BP52fA3EG7FPhgi44zi0TafJwQgY1Ne0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/Z3BicmFtaGFwdXJp/LmVkdS5pbi93cC1j/b250ZW50L3VwbG9h/ZHMvMjAyMC8wMi84/LWxvZ28tMS5qcGc" alt="MSBTE Logo" class="logo">
+        </div>
         <h1>Exam Result Portal</h1>
         <form action="https://gifdb.com/images/high/super-hot-sike-9p7q0liafpyxauut.gif" method="get">
             <label for="roll-number">Roll Number:</label>
